# bigworld

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  vcpkg.json
assets/: bigworld.rc
src/: Application.cpp  Application.hpp  InputHandler.cpp  InputHandler.hpp  Renderer.cpp  Renderer.hpp  SoundEngine.cpp  main.cpp
src/Render/: RenderEngine.cpp  RenderObject.cpp
src/Render/Objects/: Star.cpp  Triangle.cpp
src/include/bigworld/Render/: RenderEngine.hpp  RenderObject.hpp
src/include/bigworld/Render/Objects/: Triangle.hpp
